--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,12 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Bracle" />
+  <meta name="keywords"
+    content="Bracle Network, decentralized oracle network, blockchain data market, Bitcoin, blockchain ecosystem, reliable data feeds, DApps, smart contracts, blockchain technology, data providers profit, blockchain data services." />
+  <meta name="description"
+    content="Unlock the potential of your DApps with Bracle Network, a decentralized oracle network and data market built for Bitcoin and the broader blockchain ecosystem. Providing accurate, diverse, and frequently updated data feeds, Bracle Network enhances smart contract functionality across multiple blockchain platforms. Join us in revolutionizing the blockchain space by delivering reliable data to DApps while generating lucrative returns for data providers. Experience cutting-edge technology that ensures the integrity and timeliness of the data crucial for your decentralized applications." />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -22,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Bracle</title>
+  <title>Bracle - Decentralized Oracle Network and Data Market for Bitcoin</title>
 </head>
 
 <body>
